tests/NormalTests/paczka1/fuzzy1/96361121.err
Error in line 10: 0Sy7nO S827 75,0
Error in line 7: A969 S242 23,3
Error in line 14: A969 S827 54,6
Error in line 12: cN16BQ7 S827 53,3
